# orchestration5IABD

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
cours/: .gitignore  README.md
cours/slides/: S10_Tests_Pytest.pptx  S11_Tests_Donnees_Modele_QCM.pptx  S12_FastAPI.pptx  S13_API_Registry.pptx  S14_Docker_Compose.pptx  S15_Tests_API.pptx  S16_Orchestration_Concepts.pptx  S17_Airflow.pptx  S18_GitHubActions_CI.pptx  S19_GitHubActions_CD.pptx  S1_Introduction_MLOps.pptx  S20_Deploiement_AWS_Soutenance.pptx  S2_Environnement_Outils.pptx  S3_Baseline_FilRouge.pptx  S4_Reproductibilite_Validation.pptx  S5_MLflow_Tracking.pptx  S6_Optuna_ModelRegistry.pptx  S7_AutoML_SHAP.pptx  S8_Docker.pptx  S9_Conteneuriser_Entrainement.pptx
cours/todo/: Makefile  README.md  docker-compose.yml
cours/todo/dags/: retrain_dag.py
cours/todo/docker/: Dockerfile.api  Dockerfile.frontend  (+1 more)
cours/tp/: TP_S0_projet_personnel.md  TP_S12_fastapi.md  TP_S14_bis_streamlit.md  TP_S14_docker_compose.md  TP_S17_airflow.md  TP_S17_bis_airflow.md  TP_S5_mlflow.md  TP_S6_optuna.md  TP_S7_automl_shap.md  TP_S8_docker.md
dags/: predictions_dag.py  retrain_dag.py
data/raw/: students_dropout_academic_success.csv
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.frontend  Dockerfile.train
frontend/: app.py
scripts/: predict_client.py
src/: api.py  config.py  data.py  evaluate.py  evaluation.py  features.py  tracking.py  train.py  train_models.py  train_optuna.py
tests/: test_api.py  test_data.py  test_features.py
(+10 files in other folders)
