[project]
name = "mlops-student-dropout"
version = "0.1.0"
description = "Prédiction de l'abandon scolaire — Pipeline MLOps (ESGI)"
requires-python = ">=3.13"
dependencies = [
  "scikit-learn>=1.4",
  "pandas>=2.0",
  "numpy>=1.26",
  "joblib>=1.3",
  "mlflow>=2.12",
  "optuna>=3.6",
  "xgboost>=2.0",
  "lightgbm>=4.3",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "matplotlib>=3.8",
  "shap>=0.45",
  "python-dotenv>=1.0",
  "streamlit>=1.30",
  "httpx>=0.27",
  "numba>=0.61",
  "llvmlite>=0.44",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "dill>=0.3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"

# Le stack scientifique ne fournit pas de stubs de types : on ignore les
# imports non types pour ces librairies, tout en gardant mypy strict sur src/.
[[tool.mypy.overrides]]
module = [
  "sklearn.*",
  "pandas.*",
  "joblib.*",
  "mlflow.*",
  "optuna.*",
  "shap.*",
  "xgboost.*",
  "lightgbm.*",
  "streamlit.*",
  "pymysql.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
